# document_extraction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start.sh
backend/: __init__.py  config.py  models.py  pipeline.py
backend/align/: __init__.py  aligner.py
backend/confidence/: aggregator.py  document.py  router.py  rules.py  scorer.py  signals.py  token_matcher.py
backend/extract/: base.py  flatten.py  json_utils.py  openai_vlm.py  vlm_extractor.py
backend/ingest/: loader.py
backend/ocr/: base.py  tesseract.py
backend/validate/: format.py  semantic.py  validator.py
scripts/: start.sh
ui/: streamlit_app.py
